syntax = "proto3";

package pb;
option go_package = "github.com/rruzicic/globetrotter/bnb/reservation-service/pb";
import "google/protobuf/timestamp.proto";

message Reservation{
    string accommodationId = 1;
    string userId = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    int32 numOfGuests = 5;
    bool isApproved = 6;
    float totalPrice = 7;
    string id = 8;
}

message ReservationEvent{
    string accommodationId = 1;
    string userId = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    int32 numOfGuests = 5;
    bool isApproved = 6;
    float totalPrice = 7;
    string id = 8;
    string hostId = 9;
    string accommodationName = 10;
}

message RequestReservationById{
    string id = 1;
}

message RequestReservationsByAccommodationId{
    string id = 1;
}

message RequestUserId{
    string id = 1;
}

message EmptyResMsg {}

message PingMessage {
    string msg = 1;
}

service ReservationService {
    rpc GetAllReservations(EmptyResMsg) returns (stream Reservation) {}
    rpc GetReservationById(RequestReservationById) returns (Reservation) {}
    rpc GetReservationsByAccommodationId(RequestReservationsByAccommodationId) returns (stream Reservation) {}
    rpc GetActiveReservationsByUser(RequestUserId) returns (stream Reservation) {}
    rpc GetFutureActiveReservationsByHost(RequestUserId) returns (stream Reservation) {}
    rpc GetFinishedReservationsByUser(RequestUserId) returns (stream Reservation) {}
    rpc Ping(EmptyResMsg) returns (PingMessage) {}
}

